Fixed the navbar bug where the list-items overlapped eachother

--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -165,7 +165,7 @@
         text-align: center;
         width: 100%;
         font-size: 3rem;
-        padding: 20px;
+        padding-right: 20px;
     }
     .nav div.media_button {
         display: block;
